[package]
authors = [ "Ricardo Martins <ricardo@scarybox.net>", "Ogier Bouvier <ogier.bouvier@epfl.ch" ]
description = "An async µTP (Micro/uTorrent Transport Library) library for Tokio"
documentation = "http://meqif.github.io/rust-utp"
homepage = "https://github.com/Distributed-EPFL/tokio-utp"
keywords = [ "async", "utp", "networking", "protocol", "transport" ]
license = "MIT/Apache-2.0"
name = "tokio-utp"
readme = "README.md"
repository = "https://github.com/SonicFrog/tokio-utp"
version = "0.8.0-alpha1"
edition = "2018"

[dependencies]
tokio = { version = "1", features = [ "time", "macros", "rt", "io-util", "sync", "net" ] }
log = "0.4"
num-traits = "0.1"
rand = "0.8"
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tracing-subscriber = { version = "0.2", features = [ "fmt" ] }

[lib]
name = "utp"

[features]
unstable = []
